fixed 37399: Media Preview comes with unwanted scrollbar

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -14314,7 +14314,6 @@ html.ilc_Fullscreen td > div,
 body.ilc_Fullscreen td > div,
 html.ilc_Fullscreen td > div > figure > div > iframe,
 body.ilc_Fullscreen td > div > figure > div > iframe {
-  height: 100%;
   width: 100%;
 }
 div.ilLMMenu {
@@ -20013,3 +20012,4 @@ table.mceToolbar td {
     width: auto !important;
   }
 }
+/*# sourceMappingURL=delos.css.map */
